# composable-cross-prompt

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/ASAP/: sft_template_simple.xlsx
assets/ASAP/ridley_split/1/: dev.tsv  test.tsv  train.tsv
assets/ASAP/ridley_split/2/: dev.tsv  test.tsv  train.tsv
assets/ASAP/ridley_split/3/: dev.tsv  test.tsv  train.tsv
assets/ASAP/ridley_split/4/: dev.tsv  test.tsv  train.tsv
assets/ASAP/ridley_split/5/: dev.tsv  test.tsv  train.tsv
assets/ASAP/ridley_split/6/: dev.tsv  test.tsv  train.tsv
assets/ASAP/ridley_split/7/: dev.tsv  test.tsv  train.tsv
assets/ASAP/ridley_split/8/: dev.tsv  test.tsv  train.tsv
assets/PERSUADE2.0/: sft_template_simple.xlsx
configs/: sft_cross-prompt-individual.yaml  sft_cross-prompt.yaml
src/: pim_merge.py  precompute_source_statistics.py  preprocess_ASAP.py  preprocess_PERSUADE2.0.py  sft.py
src/data/: processor.py
src/eval/: evaluator.py
src/model/: mergers.py  utils.py
src/utils/: configs.py  constants.py  utils.py
