[project]
name = "emnlp-maes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization==2.0.3",
    "bitsandbytes>=0.47.0",
    "datasets==3.1.0",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "peft>=0.13.2",
    "scikit-learn>=1.3.2",
    "torch>=2.8.0",
    "transformers>=4.51.3",
    "trl==0.12.1",
]
